2009-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/main.py:
	* python/things/common/parse.py:
	* python/things/model/couch.py:
	  Add add and delete commands.
	  Add command interpreter.
	  Update Thing so we can calculate priority even if fields are
	  missing.

2009-10-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/common/parse.py (svn:executable):
	* python/things/common/parse.py (added):
	  Add parser lifted from yagtd.
	* python/things/command/main.py:
	  Add search command.
	* python/things/model/couch.py:
	  Add kwargs to view.

2009-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/main.py:
	* python/things/model/couch.py:
	  Add priority() from yagtd.

2009-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* . (added):
	* python (added):
	* python/things (added):
	* python/things/model (added):
	* python/things/common (added):
	* python/things/command (added):
	* couchdb (added):
	  Initial creation
